--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
         <video class="player__video viewer" src="video/videoplayback.mp4"></video>
         <div class="player__controls">
             <div class="progress">
-                 <div class="progress__filed"></div>
+                 <div class="progress__filled"></div>
             </div>
              <button class="player__button toggle">►</button>
 
             <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
             <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
 
-            <button data-skip="-10" class="player__button">10s</button>
-            <button data-skip="10"  class="player__button">10s <i class="fas fa-angle-double-right"></i></button>
-            <!--<button data-skip="-10" class="player__button"> <i class="fas fa-angle-double-left"></i> 10s</button>
-            <button data-skip="10"  class="player__button">10s <i class="fas fa-angle-double-right"></i></button>-->
+
+
         </div>
     </div>
 
